Suppression of reflection-related warnings